Update openapi.json to better reflect updated backend functionality and update database seeding
